# langley

./: .env.example  .gitignore  CLAUDE.md  CONCEPT.md  INTERVIEW.md  Makefile  README.md  how-it-works.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/src/langley_api/: __init__.py  main.py  ratelimit.py  schemas.py
apps/api/static/: index.html
apps/api/tests/: test_ratelimit.py
apps/web/: README.md
docs/: architecture.md
scripts/: capture_dossier.py
