[project]
name = "langley-api"
version = "0.1.0"
description = "Langley demo API + UI — a thin HTTP layer over the Risk Guardian agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langley-risk",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
langley-api = "langley_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langley_api"]

[tool.uv.sources]
langley-risk = { workspace = true }
